# p2p-chat

./: Cargo.toml  LICENSE  README.md
core/account/: Cargo.toml
core/account/src/: lib.rs
core/protocol/: README.md
docs/: start.md
network/chat/: Cargo.toml
network/chat/src/: main.rs
network/mdns/: Cargo.toml
network/ping/: Cargo.toml
network/ping/src/: lib.rs  main.rs
pchat/: README.md  build.rs  cargo.toml
pchat/src/: behaviour.rs  cli.rs  lib.rs  main.rs  swarm_event.rs
pchat/tests/: message.rs
utils/: Cargo.toml
utils/src/: lib.rs  message_id_generator.rs
