[workspace]
members = [
 "pchat",
 "network/ping",
 "network/chat"
]


[workspace.package]
edition = "2021"
authors = ["waterbang <water_bang@163.com>"]
rust-version = "1.67.1"

[workspace.metadata.workspaces]
version = "0.0.0"
exclude = [ "pchat" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
base64 = "0.21.0"
anyhow = "1.0.62"
libp2p = {version = "0.49.0", features = ["tcp","dns", "mdns", "async-std", "websocket", "noise", "mplex", "yamux","ping","identify"] } 
tokio = {version = "1.22.0",features = ["full"]}
