[workspace]
members = [
 "pchat",
 "network/ping",
 "network/chat",
 "core/account",
 "core/protocol"
]


[workspace.package]
edition = "2021"
authors = ["waterbang <water_bang@163.com>"]
rust-version = "1.67.1"

[workspace.metadata.workspaces]
version = "0.0.0"
exclude = [ "pchat" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
base64 = "0.21.0"
anyhow = "1.0.62"
libp2p = {version = "0.51.1", features = ["tcp","dns", "mdns", "async-std", "gossipsub", "noise", "mplex", "yamux","ping","identify"] } 
libp2p-quic = { version="0.7.0-alpha.3", features = ["tokio"] }
libp2p-swarm-derive = {version = "0.32.0"}
tokio = {version = "1.22.0",features = ["full"]}
async-std = { version = "1.12", features = ["attributes"] }
bytes = "1"
futures = "0.3.26"
clap = { version = "4.1.11"}
